# model-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: docker-publish.yml  release.yml
.github/workflows/: release.yml
src/: app.py
